# PyTorch-Object-Detection-Faster-RCNN-Tutorial

./: .env  .flake8  README.md  anchor_generator.py  anchor_script.ipynb  annotation_script.ipynb  api_key_neptune.py  backbone_resnet.py  dataset_exploration_script.ipynb  datasets.py  faster_RCNN.py  inference_script.ipynb  makefile  pyproject.toml  rename_files_script.ipynb  requirements-dev.txt  requirements.txt  setup.py  training_script.ipynb  training_script.py  transformations.py  utils.py  visual.py
Pores/: Pores_analysis.py  Pores_annotation.py  Pores_inference.py  Pores_inference_big.py  Pores_inference_script.py  Pores_results_to_xlsx.py  Pores_script_rescale_files.py  Pores_training.py  Pores_utils.py  testing_stuff.py
Pores/training_data/input_224x224/: 001.tif  006.tif  010.tif  013.tif  014.tif  016.tif  018.tif
Pores/training_data/target_224x224/: 000.json  001.json  006.json  009.json  011.json  015.json
heads/predictions/: 001.json  002.json  003.json  005.json  006.json  007.json
metrics/: bounding_box.py  general_utils.py  pascal_voc_evaluator.py  pascal_voc_evaluator_test.py
pores/: Pores_inference.py  Pores_inference_big.py  Pores_inference_script.py  Pores_visualize_predictions.py  README.md  training_script.py
pores/analysis/: Pores_analysis.py
pores/annotations/: Pores_annotation.py
pores/training_data/input_224x224/: 000.tif  002.tif  003.tif  005.tif  007.tif  008.tif  009.tif  011.tif  012.tif  015.tif  017.tif  019.tif  020.tif  021.tif  022.tif  023.tif  024.tif
pores/training_data/target_224x224/: 002.json  003.json  005.json  007.json  008.json  010.json  012.json  013.json  014.json  016.json  017.json  018.json  019.json  020.json  021.json  022.json  023.json  024.json
pores/training_scripts/: training_script.py
pytorch_faster_rcnn_tutorial/: anchor_generator.py  backbone_resnet.py  datasets.py  faster_RCNN.py  transformations.py  utils.py  visual.py
pytorch_faster_rcnn_tutorial/metrics/: README.md  bounding_box.py  enumerators.py  general_utils.py  pascal_voc_evaluator.py  pascal_voc_evaluator_test.py
src/pytorch_faster_rcnn_tutorial/: anchor_generator.py  anchor_viewer.py  annotator.py  backbone_resnet.py  dataset_viewer.py  datasets.py  faster_RCNN.py  transformations.py  utils.py  visual.py
src/pytorch_faster_rcnn_tutorial/metrics/: README.md  bounding_box.py  enumerators.py  general_utils.py  pascal_voc_evaluator.py  pascal_voc_evaluator_example.py
src/pytorch_faster_rcnn_tutorial/viewers/: anchor_viewer.py  dataset_viewer.py  object_detection_viewer.py
tests/: test_backbone_resnet.py  test_faster_RCNN.py
(+2 files in other folders)
